--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ logging.level.org.springframework=ERROR
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/phone-store
 spring.datasource.username= postgres
 spring.datasource.password= 123456
 spring.datasource.hikari.maximum-pool-size=2
